RESOLVED FIXED230178
css/css-transforms/translate-getComputedStyle.html fails
https://bugs.webkit.org/show_bug.cgi?id=230178
Summary css/css-transforms/translate-getComputedStyle.html fails
Simon Fraser (smfr)
Reported 2021-09-10 16:22:37 PDT
https://drafts.csswg.org/css-transforms-2/#propdef-translate says: Note: The resolved value of the translate property is the computed value, and thus getComputedStyle() includes percentage values in its results. We need to implement this to fix the test.
Attachments
Patch (20.61 KB, patch)
2021-09-10 21:59 PDT, Simon Fraser (smfr)
no flags
Patch (22.02 KB, patch)
2021-09-11 10:34 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2021-09-10 21:59:07 PDT
Simon Fraser (smfr)
Comment 2 2021-09-11 10:34:06 PDT
EWS
Comment 3 2021-09-11 18:41:15 PDT
Committed r282315 (241585@main): <https://commits.webkit.org/241585@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437956 [details].
Radar WebKit Bug Importer
Comment 4 2021-09-11 18:42:18 PDT
Note You need to log in before you can comment on or make changes to this bug.